feat: Professional project reorganization
- Restructure into modular src/ directory organization
- Create shared common/graph_parser for CPU and GPU implementations
- Separate preprocessing, cpu, gpu, and utils into distinct modules
- Add professional CMakeLists.txt with proper target dependencies
- Create comprehensive README.md with usage instructions
- Update .gitignore for new directory structure
- Implement clean separation of concerns for scalability

Ready for Phase 3: GPU CUDA implementation with SSSP kernels

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ CMakeFiles/
 *.cubin
 *.fatbin
 
-# Data files (crucial for your project)
-nyc_graph.bin
-Dataset/
+# Data files (large binary files)
+data/
+*.bin
+*.pbf
