refactor: Professional codebase reorganization and cleanup
Major refactoring for better project organization:

1. Remove duplicate files:
   - Removed duplicate gpu_graph.cu from root directory
   - Removed tracked build-mac/ files from git

2. Improve .gitignore:
   - Comprehensive ignore patterns for build artifacts
   - Proper exclusion of compiled files, binaries, and temporary files
   - OS-specific ignores (DS_Store, Thumbs.db, etc.)
   - CUDA compilation artifacts

3. Reorganize GPU folder structure:
   - src/gpu/common/ - Shared GPU utilities (gpu_graph.cu, gpu_graph.h)
   - src/gpu/dijkstra/ - GPU Work-list SSSP algorithm
   - src/gpu/delta_stepping/ - GPU Delta-stepping algorithm
   - Updated all include paths to reflect new structure

4. Update build system:
   - CMakeLists.txt updated with new file paths
   - Clear separation of algorithms in build configuration

5. Update documentation:
   - README.md reflects new project structure
   - Clear folder hierarchy documentation

This reorganization improves:
- Code maintainability and scalability
- Clear separation of concerns
- Easier addition of new GPU algorithms
- Professional project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,109 @@
-# C++ and CMake build files
+# Build directories
 build/
-*.o
-*.a
-*.so
-*.exe
+build-*/
 cmake-build-*/
+out/
+dist/
+
+# CMake generated files
 CMakeCache.txt
 CMakeFiles/
+cmake_install.cmake
+CTestTestfile.cmake
+*.cmake
+!CMakeLists.txt
+Makefile
+
+# Compiled Object files
+*.o
+*.obj
+*.lo
+*.slo
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Compiled Static libraries
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+bin/
+!scripts/
 
 # IDE/Editor specific files
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 *.suo
 *.user
+*.userosscache
+*.sln.docstates
 *.pdb
 *.opensdf
+*.sdf
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
 
-# CUDA files
+# CUDA compilation artifacts
 *.ptx
 *.cubin
 *.fatbin
+*.cudafe1.c
+*.cudafe2.c
+*.cudafe1.cpp
+*.cudafe2.cpp
+*.cudafe1.gpu
+*.cudafe2.gpu
+*.cudafe1.stub.c
+*.cudafe2.stub.c
+*.cudafe1.fatbin
+*.cudafe2.fatbin
 
 # Data files (large binary files)
-data/
+data/raw/
+data/processed/
 *.bin
 *.pbf
+*.osm
+*.osm.pbf
+
+# Documentation build
+docs/_build/
+docs/build/
+
+# Python (if any scripts)
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# OS specific
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+*.log
+*.bak
+*.swp
