feat: Add professional variable-weight graph generator for delta-stepping testing
- Create graph_converter_variable_weights.cpp with highway-based weight multipliers
- Implement weight distribution analysis (min/max/mean/median/std dev)
- Add histogram visualization and research interpretation
- Highway classification: motorway (50x), primary (10x), residential (1x)
- Add comprehensive testing script for variable-weight graph analysis
- Update CMakeLists.txt to build variable-weight converter
- Professional research-grade implementation for algorithm validation

Purpose: Test delta-stepping on graphs with variable edge weights (>100x range)
where it theoretically excels, vs uniform-weight road networks where it's slower.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,24 @@ if(OSMIUM_INCLUDE_DIR)
         /opt/homebrew/lib/liblz4.dylib
         /opt/homebrew/opt/expat/lib/libexpat.dylib
     )
+    
+    # Variable-weight graph converter for delta-stepping testing
+    add_executable(graph_converter_variable_weights src/preprocessing/graph_converter_variable_weights.cpp)
+    
+    target_include_directories(graph_converter_variable_weights PRIVATE 
+        ${OSMIUM_INCLUDE_DIR}
+        /opt/homebrew/include
+        /opt/homebrew/Cellar/libosmium/2.22.0/include
+        /opt/homebrew/opt/expat/include
+    )
+    
+    target_link_libraries(graph_converter_variable_weights PRIVATE 
+        Threads::Threads
+        ZLIB::ZLIB
+        BZip2::BZip2
+        /opt/homebrew/lib/liblz4.dylib
+        /opt/homebrew/opt/expat/lib/libexpat.dylib
+    )
 else()
     message(WARNING "Osmium library not found. Skipping graph_converter build.")
 endif()
