feat: Add graph weight modifier tool (no osmium dependency)
- Create graph_weight_modifier.cpp that modifies existing binary graphs
- Applies highway multipliers to create variable-weight graphs
- No osmium library required - works with existing graph.bin files
- Includes weight distribution analysis and statistics
- Research-grade tool for delta-stepping algorithm testing

Usage: Modifies edge weights in existing graph to test delta-stepping
on variable-weight graphs without needing OSM preprocessing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,16 @@ else()
     message(WARNING "Osmium library not found. Skipping graph_converter build.")
 endif()
 
+# Graph weight modifier (post-processing tool, no osmium required)
+add_executable(graph_weight_modifier 
+    src/preprocessing/graph_weight_modifier.cpp
+    src/common/graph_parser.cpp
+)
+
+target_link_libraries(graph_weight_modifier PRIVATE
+    Threads::Threads
+)
+
 # CPU implementation
 add_executable(cpu_dijkstra 
     src/cpu/main_cpu.cpp
